bigger icon button padding, fix card button align

--- a/source/stylesheets/campo-ui/_button.css.scss
+++ b/source/stylesheets/campo-ui/_button.css.scss
@@ -143,8 +143,8 @@ button,
 .button-icon {
   min-width: 0;
   color: #555;
-  padding: em(6);
-  border-radius: em(18);
+  padding: em(8);
+  border-radius: em(20);
 
   &:hover {
   }
